bpo-35372: Fix the code page decoder for input > 2 GiB. (GH-10848)